[package]
name = "ultimate64"
version = "0.5.5"
edition = "2021"
description = "Rust library and command line interface for networking with Ultimate-64 and Ultimate-II+ devices using the REST API"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/ultimate64"
repository = "https://github.com/mlund/ultimate64"
documentation = "https://docs.rs/ultimate64"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["c64", "network", "8-bit"]
categories = ["command-line-utilities"]

[[bin]]
name = "ru64"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.0", features = ["derive", "env", "std", "color", "help"], default-features = false }
parse_int = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
disasm6502 = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
pretty_env_logger = { version = "0.5", default-features = false }
url = { version = "2.5", default-features = false }
prettytable = { version = "0.10.0", default-features = false }
byteorder = "1.5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] } 
socket2 = "0.6"
viuer = { version = "0.9", default-features = false }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link-time optimization.
codegen-units = 1 # Compile the entire crate as a single unit.
panic = "abort"   # Abort on panic.

[dev-dependencies]
eframe = "0.32.0"

